* important changes in version 1.39_02 25/08/2008:
- Address #31806: Please add support for bzipped tar files.
  Archive::Tar now supports reading/writing tar.bz2 files.
- Since IO::Zlib is now core, it is now a default dependency.
- Added Package::Constants as a dependency to ease the use of A::T::Constants
- Dependency on IO::Compress::Bzip2 and IO::Uncompress::Bunzip2 is on
  by default, but can be negated with the -n switch when building:
  'perl Makefile.PL -n'
- Improve documentation on the new ->iter function

* important changes in version 1.39_01 22/08/2008:
- Address the second part mentioned in this report:
  #30380: directory traversal vulnerability in Archive-Tar
  Archives are no longer allowed to extract into symlinked directories,
  unless Insecure Extract Mode is enabled (which is off by default).
- Add regression tests for this behaviour
- Address #33669 (Could not update timestamp warning on symlinks)
  Don't update timestamps on symlinks, they'll modify the original
- Apply core patch: [patch@33971] Archive::Tar was building corrupt
  archives on VMS as supplied by John Malmberg
- Address #37375: ptar should allow '-' as an archive_file name
  Patch provided by glenn jackman
- Add convenience method ->extract() to A::T::File
- improve docs of A::T::File by adding rv & object in the header
- Address #38580: [PATCH] Archive::Tar-&gt;iter
  This adds an iterator to Archive::Tar, thanks to Gisle Aas

* important changes in version 1.38    14/12/2007:
- Promote 1.37_01 to stable.

* important changes in version 1.37_01 11/11/2007:
_ Address #30380: directory traversal vulnerability in Archive-Tar
  - Add $INSECURE_EXTRACT_MODE which defaults to 0, disallowing
    archives to extract files outside of cwd(). This is a backwards
    incompatible change from 1.36 and before.
  - Add a -I option to ptar to enable insecure extraction if needed

* important changes in version 1.36 16/9/2007:
-   Portability fixes for VMS, as offered by Craig Berry.
